# RaaM

./: .gitignore  pyproject.toml  requirements.txt
models/: __init__.py  base.py  causal_lm.py  layers.py  model.py  utils.py
notebooks/: _qwen_test.ipynb  _test_accelerate.ipynb  _test_dataloader.ipynb
tests/: __init__.py  test_forward_equivalence.py
training/: __init__.py  cot_train.yaml  data.py  train.py  utils.py
